--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "15af3830",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05d2b13e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a3556f0f",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "437ea885",
    "metadata": {},
    "outputs": [],
@@ -60,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c9e7fdb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x1e0ea7d3c08>"
+       "<zip at 0x29551f101c8>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "08e5d90b",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2f0c6d9a",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3078e5a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "639"
+       "616"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e06d14c5",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e88afc36",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1113104d",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a2c88083",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "22282dbf",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "35d2515d",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,17 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c874997d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":701,\"main\":\"Mist\",\"description\":\"mist\",\"icon\":\"50d\"}],\"base\":\"stations\",\"main\":{\"temp\":57.74,\"feels_like\":57.69,\"temp_min\":53.94,\"temp_max\":60.91,\"pressure\":1009,\"humidity\":95},\"visibility\":2414,\"wind\":{\"speed\":4,\"deg\":157,\"gust\":11.01},\"clouds\":{\"all\":90},\"dt\":1635612491,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1635592515,\"sunset\":1635630021},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":802,\"main\":\"Clouds\",\"description\":\"scattered clouds\",\"icon\":\"03d\"}],\"base\":\"stations\",\"main\":{\"temp\":63.18,\"feels_like\":62.67,\"temp_min\":59.67,\"temp_max\":66.15,\"pressure\":998,\"humidity\":74},\"visibility\":10000,\"wind\":{\"speed\":8.01,\"deg\":290,\"gust\":21.99},\"clouds\":{\"all\":40},\"dt\":1635697583,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1635678990,\"sunset\":1635716342},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "80c40964",
    "metadata": {},
    "outputs": [
@@ -309,33 +309,33 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 701,\n",
-       "   'main': 'Mist',\n",
-       "   'description': 'mist',\n",
-       "   'icon': '50d'}],\n",
+       " 'weather': [{'id': 802,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 57.74,\n",
-       "  'feels_like': 57.69,\n",
-       "  'temp_min': 53.94,\n",
-       "  'temp_max': 60.91,\n",
-       "  'pressure': 1009,\n",
-       "  'humidity': 95},\n",
-       " 'visibility': 2414,\n",
-       " 'wind': {'speed': 4, 'deg': 157, 'gust': 11.01},\n",
-       " 'clouds': {'all': 90},\n",
-       " 'dt': 1635612491,\n",
+       " 'main': {'temp': 63.18,\n",
+       "  'feels_like': 62.67,\n",
+       "  'temp_min': 59.67,\n",
+       "  'temp_max': 66.15,\n",
+       "  'pressure': 998,\n",
+       "  'humidity': 74},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.01, 'deg': 290, 'gust': 21.99},\n",
+       " 'clouds': {'all': 40},\n",
+       " 'dt': 1635697583,\n",
        " 'sys': {'type': 2,\n",
        "  'id': 2013408,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1635592515,\n",
-       "  'sunset': 1635630021},\n",
+       "  'sunrise': 1635678990,\n",
+       "  'sunset': 1635716342},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "63aa6c7d",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "978e06d1",
    "metadata": {},
    "outputs": [
@@ -395,47 +395,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "495bc8d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'coord': {'lon': 88.3972, 'lat': 69.4865},\n",
-       " 'weather': [{'id': 600,\n",
-       "   'main': 'Snow',\n",
-       "   'description': 'light snow',\n",
-       "   'icon': '13n'}],\n",
+       "{'coord': {'lon': -114.3525, 'lat': 62.456},\n",
+       " 'weather': [{'id': 803,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 18.05,\n",
-       "  'feels_like': 18.05,\n",
-       "  'temp_min': 18.05,\n",
-       "  'temp_max': 18.05,\n",
-       "  'pressure': 999,\n",
-       "  'humidity': 96,\n",
-       "  'sea_level': 999,\n",
-       "  'grnd_level': 991},\n",
-       " 'visibility': 122,\n",
-       " 'wind': {'speed': 2.75, 'deg': 149, 'gust': 3.65},\n",
-       " 'snow': {'1h': 0.32},\n",
-       " 'clouds': {'all': 100},\n",
-       " 'dt': 1635613981,\n",
-       " 'sys': {'country': 'RU', 'sunrise': 1635647137, 'sunset': 1635671657},\n",
-       " 'timezone': 25200,\n",
-       " 'id': 1490256,\n",
-       " 'name': 'Talnakh',\n",
+       " 'main': {'temp': 27.46,\n",
+       "  'feels_like': 20.1,\n",
+       "  'temp_min': 26.29,\n",
+       "  'temp_max': 28.42,\n",
+       "  'pressure': 1025,\n",
+       "  'humidity': 100},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 6.91, 'deg': 80},\n",
+       " 'clouds': {'all': 75},\n",
+       " 'dt': 1635697520,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2041581,\n",
+       "  'country': 'CA',\n",
+       "  'sunrise': 1635692958,\n",
+       "  'sunset': 1635723155},\n",
+       " 'timezone': -21600,\n",
+       " 'id': 6185377,\n",
+       " 'name': 'Yellowknife',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"talnakh\"\n",
+    "city_url = url + \"&q=\" + \"yellowknife\"\n",
     "city_weather = requests.get(city_url)\n",
     "city_weather.json()"
    ]
