--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,31 +149,22 @@
        "4           3        7.38           clear sky  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1. Import the WeatherPy_database.csv file. \n",
-    "city_data_df = pd.read_csv(\"Weather_Database/WeatherPy_database.csv\")\n",
+    "city_data_df = pd.read_csv(\"../Weather_Database/WeatherPy_database.csv\")\n",
     "city_data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is the minimum temperature you would like for your trip? 60\n",
-      "What is the maximum temperature you would like for your trip? 87\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Prompt the user to enter minimum and maximum temperature criteria \n",
     "min_temp = float(input(\"What is the minimum temperature you would like for your trip? \"))\n",
@@ -182,208 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City_ID</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Current Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Vaini</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>-21.2000</td>\n",
-       "      <td>-175.2000</td>\n",
-       "      <td>71.76</td>\n",
-       "      <td>94</td>\n",
-       "      <td>20</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>few clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ponta Do Sol</td>\n",
-       "      <td>PT</td>\n",
-       "      <td>32.6667</td>\n",
-       "      <td>-17.1000</td>\n",
-       "      <td>76.71</td>\n",
-       "      <td>78</td>\n",
-       "      <td>37</td>\n",
-       "      <td>7.09</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Butaritari</td>\n",
-       "      <td>KI</td>\n",
-       "      <td>3.0707</td>\n",
-       "      <td>172.7902</td>\n",
-       "      <td>80.51</td>\n",
-       "      <td>78</td>\n",
-       "      <td>46</td>\n",
-       "      <td>9.57</td>\n",
-       "      <td>light rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Nizwa</td>\n",
-       "      <td>OM</td>\n",
-       "      <td>22.9333</td>\n",
-       "      <td>57.5333</td>\n",
-       "      <td>80.91</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7.38</td>\n",
-       "      <td>clear sky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Kahului</td>\n",
-       "      <td>US</td>\n",
-       "      <td>20.8947</td>\n",
-       "      <td>-156.4700</td>\n",
-       "      <td>70.84</td>\n",
-       "      <td>76</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>clear sky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Rikitea</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>-23.1203</td>\n",
-       "      <td>-134.9692</td>\n",
-       "      <td>74.07</td>\n",
-       "      <td>88</td>\n",
-       "      <td>100</td>\n",
-       "      <td>17.58</td>\n",
-       "      <td>moderate rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Constitucion</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>-35.3333</td>\n",
-       "      <td>-72.4167</td>\n",
-       "      <td>61.68</td>\n",
-       "      <td>71</td>\n",
-       "      <td>100</td>\n",
-       "      <td>6.89</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Bredasdorp</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>-34.5322</td>\n",
-       "      <td>20.0403</td>\n",
-       "      <td>63.72</td>\n",
-       "      <td>77</td>\n",
-       "      <td>97</td>\n",
-       "      <td>9.22</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Avarua</td>\n",
-       "      <td>CK</td>\n",
-       "      <td>-21.2078</td>\n",
-       "      <td>-159.7750</td>\n",
-       "      <td>73.45</td>\n",
-       "      <td>73</td>\n",
-       "      <td>75</td>\n",
-       "      <td>8.05</td>\n",
-       "      <td>broken clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>Melville</td>\n",
-       "      <td>US</td>\n",
-       "      <td>40.7934</td>\n",
-       "      <td>-73.4151</td>\n",
-       "      <td>65.53</td>\n",
-       "      <td>72</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.99</td>\n",
-       "      <td>few clouds</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    City_ID          City Country      Lat       Lng  Max Temp  Humidity  \\\n",
-       "1         1         Vaini      TO -21.2000 -175.2000     71.76        94   \n",
-       "2         2  Ponta Do Sol      PT  32.6667  -17.1000     76.71        78   \n",
-       "3         3    Butaritari      KI   3.0707  172.7902     80.51        78   \n",
-       "4         4         Nizwa      OM  22.9333   57.5333     80.91        24   \n",
-       "5         5       Kahului      US  20.8947 -156.4700     70.84        76   \n",
-       "7         7       Rikitea      PF -23.1203 -134.9692     74.07        88   \n",
-       "8         8  Constitucion      CL -35.3333  -72.4167     61.68        71   \n",
-       "10       10    Bredasdorp      ZA -34.5322   20.0403     63.72        77   \n",
-       "13       13        Avarua      CK -21.2078 -159.7750     73.45        73   \n",
-       "19       19      Melville      US  40.7934  -73.4151     65.53        72   \n",
-       "\n",
-       "    Cloudiness  Wind Speed Current Description  \n",
-       "1           20        5.75          few clouds  \n",
-       "2           37        7.09    scattered clouds  \n",
-       "3           46        9.57          light rain  \n",
-       "4            3        7.38           clear sky  \n",
-       "5            1        5.75           clear sky  \n",
-       "7          100       17.58       moderate rain  \n",
-       "8          100        6.89     overcast clouds  \n",
-       "10          97        9.22     overcast clouds  \n",
-       "13          75        8.05       broken clouds  \n",
-       "19          20        1.99          few clouds  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n",
     "# Filter the dataset to find the cities that fit the criteria.\n",
@@ -394,30 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "City_ID                334\n",
-       "City                   334\n",
-       "Country                334\n",
-       "Lat                    334\n",
-       "Lng                    334\n",
-       "Max Temp               334\n",
-       "Humidity               334\n",
-       "Cloudiness             334\n",
-       "Wind Speed             334\n",
-       "Current Description    334\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4a. Determine if there are any empty rows.\n",
     "preferred_cities_df.count()"
